Add metadata version SerDe
Signed-off-by: NathanDissoubray <nathan.dissoubray@rte-france.com>