@@ -46,8 +46,6 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 class NetworkAreaDiagramTest extends AbstractTest {
 
-    private static final String EMPTY_DIAGRAM_VERSION = "";
-
     protected FileSystem fileSystem;
 
     @BeforeEach
@@ -153,7 +151,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
 
         List<ILoggingEvent> logsList = logWatcher.list;
         assertEquals(1, logsList.size());
-        assertEquals("vl 'VL4' does not comply with the predicate", logsList.get(0).getFormattedMessage());
+        assertEquals("vl 'VL4' does not comply with the predicate", logsList.getFirst().getFormattedMessage());
         assertFileEquals("/IEEE_14_bus_voltage_filter3.svg", svgFileVoltageFilter);
     }
 
@@ -186,7 +184,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
         Network network = IeeeCdfNetworkFactory.create14();
         // test writers
         try (Writer svgWriter = new StringWriter(); StringWriter metadataWriter = new StringWriter()) {
-            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, EMPTY_DIAGRAM_VERSION);
+            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter);
             assertStringEquals("/IEEE_14_bus_voltage_nofilter.svg", svgWriter.toString());
             assertStringEquals("/IEEE_14_bus_voltage_nofilter_metadata.json", metadataWriter.toString());
         } catch (IOException e) {
@@ -194,7 +192,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
         }
         // test files
         Path svgFile = fileSystem.getPath("nad-ieee-14-bus.svg");
-        NetworkAreaDiagram.draw(network, svgFile, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile);
         assertFileEquals("/IEEE_14_bus_voltage_nofilter.svg", svgFile);
         Path metadataFile = fileSystem.getPath("nad-ieee-14-bus_metadata.json");
         assertFileEquals("/IEEE_14_bus_voltage_nofilter_metadata.json", metadataFile);
@@ -204,7 +202,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
     void testDrawWithDiagramVersion() {
         Network network = IeeeCdfNetworkFactory.create14();
         Path svgFile = fileSystem.getPath("nad-ieee-14-bus-with-version.svg");
-        NetworkAreaDiagram.draw(network, svgFile, "5.4.0");
+        NetworkAreaDiagram.draw(network, svgFile);
         assertFileEquals("/IEEE_14_bus_voltage_nofilter.svg", svgFile);
         Path metadataFile = fileSystem.getPath("nad-ieee-14-bus-with-version_metadata.json");
         assertFileEquals("/IEEE_14_bus_voltage_nofilter_with_diagram_version_metadata.json", metadataFile);
@@ -214,7 +212,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
     @Test
     void testDrawToString() {
         Network network = IeeeCdfNetworkFactory.create14();
-        String svg = NetworkAreaDiagram.drawToString(network, new SvgParameters(), EMPTY_DIAGRAM_VERSION);
+        String svg = NetworkAreaDiagram.drawToString(network, new SvgParameters());
         assertStringEquals("/IEEE_14_bus_voltage_nofilter.svg", svg);
     }
 
@@ -222,8 +220,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
     void testDrawWithFilter() {
         Network network = IeeeCdfNetworkFactory.create14();
         try (Writer svgWriter = new StringWriter(); StringWriter metadataWriter = new StringWriter()) {
-            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, VoltageLevelFilter.createNominalVoltageLowerBoundFilter(network, 20),
-                EMPTY_DIAGRAM_VERSION);
+            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, VoltageLevelFilter.createNominalVoltageLowerBoundFilter(network, 20));
             assertStringEquals("/IEEE_14_bus_voltage_filter5.svg", svgWriter.toString());
             assertStringEquals("/IEEE_14_bus_voltage_filter5_metadata.json", metadataWriter.toString());
         } catch (IOException e) {
@@ -236,7 +233,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
         Network network = IeeeCdfNetworkFactory.create14();
         // test writers
         try (Writer svgWriter = new StringWriter(); StringWriter metadataWriter = new StringWriter()) {
-            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, "VL4", 2, EMPTY_DIAGRAM_VERSION);
+            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, "VL4", 2);
             assertStringEquals("/IEEE_14_bus_voltage_filter2.svg", svgWriter.toString());
             assertStringEquals("/IEEE_14_bus_voltage_filter2_metadata.json", metadataWriter.toString());
         } catch (IOException e) {
@@ -244,13 +241,13 @@ class NetworkAreaDiagramTest extends AbstractTest {
         }
         // test files
         Path svgFile = fileSystem.getPath("nad-ieee-14-bus.svg");
-        NetworkAreaDiagram.draw(network, svgFile, "VL4", 2, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile, "VL4", 2);
         assertFileEquals("/IEEE_14_bus_voltage_filter2.svg", svgFile);
         Path metadataFile = fileSystem.getPath("nad-ieee-14-bus_metadata.json");
         assertFileEquals("/IEEE_14_bus_voltage_filter2_metadata.json", metadataFile);
 
         Path svgFile2 = fileSystem.getPath("nad-ieee-14-bus2.svg");
-        NetworkAreaDiagram.draw(network, svgFile2, List.of("VL4"), 2, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile2, List.of("VL4"), 2);
         assertFileEquals("/IEEE_14_bus_voltage_filter2.svg", svgFile2);
         Path metadataFile2 = fileSystem.getPath("nad-ieee-14-bus2_metadata.json");
         assertFileEquals("/IEEE_14_bus_voltage_filter2_metadata.json", metadataFile2);
@@ -262,7 +259,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
         Network network = IeeeCdfNetworkFactory.create14();
         // test writers
         try (Writer svgWriter = new StringWriter(); StringWriter metadataWriter = new StringWriter()) {
-            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, List.of("VL1", "VL2", "VL3", "VL4", "VL5", "VL8"), EMPTY_DIAGRAM_VERSION);
+            NetworkAreaDiagram.draw(network, svgWriter, metadataWriter, List.of("VL1", "VL2", "VL3", "VL4", "VL5", "VL8"));
             assertStringEquals("/IEEE_14_bus_voltage_filter5.svg", svgWriter.toString());
             assertStringEquals("/IEEE_14_bus_voltage_filter5_metadata.json", metadataWriter.toString());
         } catch (IOException e) {
@@ -270,7 +267,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
         }
         // test files
         Path svgFile = fileSystem.getPath("nad-ieee-14-bus.svg");
-        NetworkAreaDiagram.draw(network, svgFile, List.of("VL1", "VL2", "VL3", "VL4", "VL5", "VL8"), EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile, List.of("VL1", "VL2", "VL3", "VL4", "VL5", "VL8"));
         assertFileEquals("/IEEE_14_bus_voltage_filter5.svg", svgFile);
         Path metadataFile = fileSystem.getPath("nad-ieee-14-bus_metadata.json");
         assertFileEquals("/IEEE_14_bus_voltage_filter5_metadata.json", metadataFile);
@@ -293,7 +290,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
                     .build(network1, svgParameters1)
                 );
 
-        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER);
 
         assertFileEquals("/nad_double_arrows.svg", svgFile);
         assertFileEquals("/nad_double_arrows_metadata.json", metadataFile);
@@ -317,7 +314,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
                     .build(network1, svgParameters1)
                 );
 
-        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER);
 
         assertFileEquals("/nad-double-arrows-with-middle-label.svg", svgFile);
         assertFileEquals("/nad-double-arrows-with-middle-label_metadata.json", metadataFile);
@@ -342,7 +339,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
                 .build(network1, svgParameters1)
             );
 
-        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER);
 
         assertFileEquals("/nad-double-arrows-with-middle-values.svg", svgFile);
         assertFileEquals("/nad-double-arrows-with-middle-values_metadata.json", metadataFile);
@@ -371,7 +368,7 @@ class NetworkAreaDiagramTest extends AbstractTest {
                 .build(network1, svgParameters1)
             );
 
-        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER, EMPTY_DIAGRAM_VERSION);
+        NetworkAreaDiagram.draw(network, svgFile, nadParameters, NO_FILTER);
 
         assertFileEquals("/" + svgFileName, svgFile);
         assertFileEquals("/" + metadataFileName, metadataFile);
